k8s/argocd/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.robschwe.de`) && PathPrefix(`/outpost.goauthentik.io`)
      priority: 100
      kind: Rule
      services:
        - name: authentik-outpost
          port: 9000
    - match: Host(`argocd.robschwe.de`)
      priority: 1
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: argocd
      services:
        - name: argocd-server
          port: 80
